# MintRewardsProgram

./: Anchor.toml  README.md  package.json
programs/nft-reward-program/: Cargo.toml
programs/nft-reward-program/src/: error.rs  lib.rs  state.rs
programs/nft-reward-program/src/instructions/: admin.rs  claim_reward.rs  initialize.rs  record_mint.rs  select_winners.rs
tests/: nft-reward-program.ts
