[package]
name = "nft-reward-program"
version = "0.1.0"
description = "MintRewards NFT Reward Program for Weekly and Monthly Distributions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_reward_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.16.0"
